--- a/projects/truenas-ui/src/stories/examples/login/login.example.scss
+++ b/projects/truenas-ui/src/stories/examples/login/login.example.scss
@@ -1,8 +1,13 @@
 form {
   max-width:600px;
   margin: 0 auto;
+  padding:24px;
+  background-color: var(--bg2);
+  box-shadow: 0 8px 6px rgba(0, 0, 0, 0.1);
+  //border: solid 1px var(--alt-fg1);
 }
 
 .form-control {
-  margin: 16px 0;
+  margin: 16px auto;
+  width: 80%;
 }
