--- a/projects/truenas-ui/src/lib/ix-icon/ix-icon.component.html
+++ b/projects/truenas-ui/src/lib/ix-icon/ix-icon.component.html
@@ -1,6 +1,6 @@
 <div 
   class="ix-icon"
-  [class]="'ix-icon--' + size"
+  [ngClass]="'ix-icon--' + size"
   [style.color]="color"
   [attr.aria-label]="effectiveAriaLabel"
   [attr.title]="tooltip"
