--- a/projects/truenas-ui/src/lib/ix-input/ix-input.component.scss
+++ b/projects/truenas-ui/src/lib/ix-input/ix-input.component.scss
@@ -17,6 +17,7 @@
   border-radius: 0.375rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   outline: none;
+  box-sizing: border-box;
 
   &::placeholder {
     color: var(--alt-fg1, #999);
