--- a/projects/truenas-ui/src/lib/ix-select/ix-select.component.scss
+++ b/projects/truenas-ui/src/lib/ix-select/ix-select.component.scss
@@ -32,6 +32,7 @@
   cursor: pointer;
   transition: all 0.15s ease-in-out;
   outline: none;
+  box-sizing: border-box;
 
   &:hover:not(.disabled) {
     border-color: var(--primary, #007bff);
