--- a/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
+++ b/projects/truenas-ui/src/lib/ix-card/ix-card.component.scss
@@ -3,6 +3,10 @@
   transition: box-shadow 0.3s ease;
   overflow: hidden;
   
+  &--elevation-none {
+    box-shadow: none;
+  }
+
   &--elevation-low {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   }
